fix images and alignment

--- a/my-personal-site.css
+++ b/my-personal-site.css
@@ -14,7 +14,7 @@ body, html {
 button {
   background-color: transparent;
   border: 1px solid rgb(88, 49, 179);
-  height: 30px;
+  height: 35px;
   margin: 0 8px
 }
 
@@ -107,6 +107,7 @@ button > a {
 
 .header-menu {
   justify-content: space-between;
+  align-items: center;
 }
 
 .gh-icon {
